bug(UI): fix alignment of status info icon
- fix alignment of status info icon
- Rename wrongly named variables
- Change font of the application to 'Din Pro'

Finishes[#164138244]

--- a/src/components/AutomationDetails/styles.scss
+++ b/src/components/AutomationDetails/styles.scss
@@ -39,7 +39,7 @@
     padding: 20px;
     box-sizing: border-box;
     background-color: #fff;
-    margin: 15% auto;
+    margin: 7% auto;
     border-radius: 3px;
     z-index: 2;
     text-align: left;
@@ -49,7 +49,7 @@
     width: 850px;
 }
 .modal-title{
-    font-family:  Helvetica;
+    font-family:  'Din Pro';
     font-weight: bold;
     font-size: 20px;
     padding-left: 7px;
@@ -68,7 +68,7 @@
         background-color: #3359db;
         display: inline-block;
     }
-    
+
     .short{
         width: 20px;
         height: 3px;
@@ -88,13 +88,13 @@
         line-height: 10px;
     }
     .modal-labels{
-        font-display: Helvetica;
+        font-family: 'Din Pro';
         font-size: 14px;
         font-weight: bold;
         padding-bottom: 5px;
     }
     .modal-values{
-        font-display: Helvetica;
+        font-family: 'Din Pro';
         font-size: 14px;
         padding-bottom: 5px;
         color: gray;
@@ -120,6 +120,10 @@ table.details-table{
       text-align: center;
     }
   }
+.automation-table{
+    max-height: 45vh;
+    overflow: scroll;
+}
 .table-body-details {
     &:nth-child(odd) {
         background-color:whitesmoke;
